--- a/.cookiecutterrc
+++ b/.cookiecutterrc
@@ -50,7 +50,7 @@ default_context:
     repo_hosting:              'github.com'
     repo_hosting_domain:       'github.com'
     repo_name:                 'pybayts'
-    repo_username:             'rbavery'
+    repo_username:             'developmentseed'
     requiresio:                'yes'
     scrutinizer:               'no'
     setup_py_uses_setuptools_scm: 'no'
