--- a/tox.ini
+++ b/tox.ini
@@ -20,13 +20,7 @@ envlist =
 ignore_basepython_conflict = true
 
 [testenv]
-basepython =
-    pypy3: {env:TOXPYTHON:pypy3}
-    py36: {env:TOXPYTHON:python3.6}
-    py37: {env:TOXPYTHON:python3.7}
-    py38: {env:TOXPYTHON:python3.8}
-    py39: {env:TOXPYTHON:python3.9}
-    {bootstrap,clean,check,report,docs,codecov}: {env:TOXPYTHON:python3}
+basepython = python3
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
