--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -14,6 +14,6 @@ include CONTRIBUTING.rst
 include LICENSE
 include README.rst
 
-include tox.ini .readthedocs.yml
+include tox.ini .readthedocs.yml .pre-commit-config.yaml
 
 global-exclude *.py[cod] __pycache__/* *.so *.dylib
