--- a/tox.ini
+++ b/tox.ini
@@ -1,34 +1,10 @@
-[testenv:bootstrap]
-deps =
-    jinja2
-    matrix
-    tox
-skip_install = true
-commands =
-    python ci/bootstrap.py --no-env
-passenv =
-    *
-; a generative tox configuration, see: https://tox.readthedocs.io/en/latest/config.html#generative-envlist
-
 [tox]
-envlist =
-    clean,
-    check,
-    docs,
-    report
-ignore_basepython_conflict = true
+envlist = py36,py37,py38,check,docs,codecov,report,clean
 
 [testenv]
 basepython = python3
-setenv =
-    PYTHONPATH={toxinidir}/tests
-    PYTHONUNBUFFERED=yes
-passenv =
-    *
-usedevelop = false
 deps =
     pytest
-    pytest-travis-fold
     pytest-cov
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv tests}
@@ -54,14 +30,8 @@ deps =
     -r{toxinidir}/docs/requirements.txt
 commands =
     sphinx-build {posargs:-E} -b html docs dist/docs
-    sphinx-build -b linkcheck docs dist/docs
-
-[testenv:codecov]
-deps =
-    codecov
-skip_install = true
-commands =
-    codecov []
+    ; sphinx-build -b linkcheck docs dist/docs
+    ; echo "sphinx built"
 
 [testenv:report]
 deps =
