--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -45,7 +45,13 @@ jobs:
           name: ${{ matrix.platform }}-${{ matrix.tox-env }}
           fail_ci_if_error: false
 
-      # Constantly deploy docs during development
+      # Constantly generate and deploy docs during development
+      - name: Generate Docs
+        if: matrix.python-version == 3.8
+        env:
+          TOXENV: docs
+        run: tox
+
       - name: Deploy Docs
         if: matrix.python-version == 3.8
         uses: peaceiris/actions-gh-pages@v3
