--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
     pytest
     pytest-cov
 commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv tests}
+    {posargs:pytest --cov --cov-report=term-missing --cov-report xml -vv tests}
 
 [testenv:check]
 deps =
@@ -30,8 +30,6 @@ deps =
     -r{toxinidir}/docs/requirements.txt
 commands =
     sphinx-build {posargs:-E} -b html docs dist/docs
-    ; sphinx-build -b linkcheck docs dist/docs
-    ; echo "sphinx built"
 
 [testenv:report]
 deps =
