--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,11 +11,11 @@ on:
 
 jobs:
   tests:
-    runs: ubuntu-20.04
+    runs-on: ubuntu-20.04
     container: developmentseed/pybaytsci
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: [3.6, 3.7, 3.8]
 
     steps:
       - uses: actions/checkout@v2
