--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,34 +12,28 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-20.04
-    container: developmentseed/pybaytsci
-    strategy:
-      matrix:
-        python-version: [3.6.9, 3.7.5, 3.8.0]
+    container: developmentseed/pybaytsci:latest
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install tox codecov pre-commit wheel
+          python -m pip install tox codecov pre-commit
 
-      - name: check this pyopencl vendors
+      - name: Check pyopencl vendors
         run: |
           python -m pip install pyopencl
           ls /etc/OpenCL/vendors
           python ./test_pocl.py
 
       # Run tox using the version of Python in `PATH`
-      - name: Run Tox
+      - name: Tox
         run: tox -e py
 
       # Run pre-commit
-      - name: run pre-commit
+      - name: Pre-commit
         run: |
           pre-commit install --install-hooks
           pre-commit run --all-files
