--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,28 +12,22 @@ on:
 jobs:
   docs:
     runs-on: ubuntu-20.04
-    container: developmentseed/pybaytsci
-    strategy:
-      matrix:
-        python-version: [3.8.0]
+    container: developmentseed/pybaytsci:latest
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install tox codecov pre-commit
 
       # Run tox using the version of Python in `PATH`
-      - name: Run Tox
+      - name: Tox
         run: tox -e py
 
       # Run pre-commit
-      - name: run pre-commit
+      - name: Pre-commit
         run: |
           pre-commit install --install-hooks
           pre-commit run --all-files
