--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,7 +13,7 @@ jobs:
   tests:
     runs-on: ubuntu-20.04
     container: developmentseed/pybaytsci:latest
-
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v2
 
