--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,6 +26,8 @@ jobs:
       # Run tox using the version of Python in `PATH`
       - name: Tox
         run: tox -e py
+        env:
+          LDFLAGS: -L/usr/local/lib -L/usr/local/opt/openssl/lib -L/usr/local/opt/readline/lib
 
       # Run pre-commit
       - name: Pre-commit
