--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
     pytest
     pytest-cov
 commands =
-    {posargs:pytest --cov --cov-report=term-missing --cov-report xml -vv tests}
+    python -m pytest --cov pybayts --cov-report xml --cov-report term-missing --ignore=venv
 
 [testenv:check]
 deps =
