--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: install deps
         run: |
-          apt-get install git \
+          sudo apt-get install -y git \
             gpg-agent \
             wget \
             curl \
