--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,13 +15,14 @@ jobs:
     timeout-minutes: 20
 
     steps:
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
 
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install tox
