--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ geocube>=-0.0.16
 iteration_utilities>=-0.11.0
 scipy>=1.6.1
 sklearn
+tqdm
 # rio-cogeo==2.0.1
 # cogeo-mosaic==3.0.0rc1
 # rio-tiler==2.0.3
